fix alignment issue for 4k resolution

--- a/css/car-redesign.css
+++ b/css/car-redesign.css
@@ -169,7 +169,6 @@ html, body {
 	z-index: 50;
 	background: rgba(0,0,0,.85);
 	position: relative;
-	max-width: 1600px;
 	width: 100%;
 	height: 100px;
 	margin-top: -100px;
@@ -253,7 +252,6 @@ html, body {
 	z-index: -1;
 	background: url(../images/car/carbon-fiber-bg.jpg);
 	position: relative;
-	max-width: 1600px;
 	width: 100%;
 	height: 2650px;
 }
